src/client/assets/javascripts/features/displayManagement/displayManagement.scss
#displayManagementLayout {
  height: 100%;
}
$primary-color: #f1f1f1;
#displayManagementLayout > .ant-layout-header {
  background-color: $primary-color !important;
  height: 34px;
  line-height: 34px;
}
#displayManagementLayout > div > div > .ant-layout-sider {
  background-color: $primary-color !important;
}

#displayManagementLayout > .ant-layout-content {
  background-color: $primary-color;
}

#displayManagementLayout .display-management-content-layout {
  height: 100%;
  background-color: $primary-color;
  padding-top: 5px;
}

#displayManagementLayout .ant-layout-content {
  padding: 0px 5px 0 0;
  display: block;
  overflow-x: visible;
}

.ant-collapse-content > .ant-collapse-content-box {
  padding-top: 8px !important;
  padding-bottom: 10px !important;
}

